# business-development-pod

./: LICENSE  README.md  skills-lock.json
client/nextjs/: package.json  pnpm-lock.yaml
client/nextjs/app/: globals.css  layout.tsx  page.tsx
client/nextjs/app/api/chat/: route.ts
client/nextjs/app/chat/: page.tsx
client/nextjs/components/: ChatPage.tsx  app-sidebar.tsx  approve-agent.tsx  logo.tsx  theme-toggle.tsx
client/nextjs/components/ai-elements/: attachments.tsx  checkpoint.tsx  inline-citation.tsx  mic-selector.tsx  plan.tsx  prompt-input.tsx  web-preview.tsx
server/python/: IAM_check.py  graph_agent.py  hello.py  pyproject.toml  run_all_agent.py
server/python/agents/: biz_agent.py  design_agent.py  dev_agent.py  test_agent.py
server/python/ai_models/: mistral_model.py
server/python/helpers/: DB_helper.py
server/python/tools/: upload_file_local.py  validate_yaml.py  websearch.py
